ME_4600/MESDK/ME-MUX/VBasic/Single_Mux_1.5 VisualBasicExample/Me2600.bas


'Note, that string arguments only work with initialized string variables
'      Dim gsTextBuffer As String * 256 or alternatively  sBuffer = String(25, Chr(0))
'-------------------------------------------------------------------------------------------
Declare Function me2600ErrorMessage Lib "me2600.dll" Alias "_VBme2600ErrorMessage@4" (ByVal lpBuffer As String) As Long
Declare Function me2600Initialize Lib "me2600.dll" Alias "_VBme2600Initialize@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600GeneralReset Lib "me2600.dll" Alias "_VBme2600GeneralReset@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600GetDLLVersion Lib "me2600.dll" Alias "_VBme2600GetDLLVersion@0" () As Long
Declare Function me2600GetDriverTimeStamp Lib "me2600.dll" Alias "_VBme2600GetDriverTimeStamp@4" (ByVal lpBuffer As String) As Long
Declare Function me2600GetDriverVersion Lib "me2600.dll" Alias "_VBme2600GetDriverVersion@4" (ByVal lpBuffer As String) As Long
Declare Function me2600GetSerialNumber Lib "me2600.dll" Alias "_VBme2600GetSerialNumber@8" (ByVal lBoardnumber As Long, ByRef lSerialNumber As Long) As Long
Declare Function me2600GetVECModel Lib "me2600.dll" Alias "_VBme2600GetVECModel@8" (ByVal lBoardnumber As Long, ByRef lMEVECModel As Long) As Long
Declare Function me2600GetInterrupts Lib "me2600.dll" Alias "_VBme2600GetInterrupts@8" (ByVal lBoardnumber As Long, ByRef pInt As ME2600_ISR) As Long
Declare Function me2600GetDriverStatus Lib "me2600.dll" Alias "_VBme2600GetDriverStatus@8" (ByVal lBoardnumber As Long, ByRef pStatus As ME2600_DRIVER_STATUS) As Long
Declare Function me2600GetPCIConfiguration Lib "me2600.dll" Alias "_VBme2600GetPCIConfiguration@8" (ByVal lBoardnumber As Long, ByRef pBoard As ME_PLX9050_INFO) As Long
Declare Function me2600DLLBoardInfo Lib "me2600.dll" Alias "_VBme2600DLLBoardInfo@8" (ByVal lBoardnumber As Long, ByRef pInfo As ME2600_BOARD_INFO) As Long
Declare Function me2600AIAddToChannelList Lib "me2600.dll" Alias "_VBme2600AIAddToChannelList@8" (ByVal lBoardnumber As Long, ByVal lEntry As Long) As Long
Declare Function me2600AIClearChannelList Lib "me2600.dll" Alias "_VBme2600AIClearChannelList@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600AIMakeChannelListEntry Lib "me2600.dll" Alias "_VBme2600AIMakeChannelListEntry@16" (ByVal lChannel As Long, ByVal lRange As Long, ByVal lMode As Long, ByRef plEntry As Long) As Long
Declare Function me2600FrequencyToCounter Lib "me2600.dll" Alias "_VBme2600FrequencyToCounter@8" (ByVal dFrequency As Double) As Long
Declare Function me2600FileName Lib "me2600.dll" Alias "_VBme2600FileName@12" (ByVal lBoardnumber As Long, ByVal lType As Long, ByVal lpBuffer As String) As Long
Declare Function me2600AISetTrigger Lib "me2600.dll" Alias "_VBme2600AISetTrigger@8" (ByVal lBoardnumber As Long, ByVal lModePolarity As Long) As Long
Declare Function me2600AISetTimer Lib "me2600.dll" Alias "_VBme2600AISetTimer@12" (ByVal lBoardnumber As Long, ByVal lScan As Long, ByVal lChan As Long) As Long
Declare Function me2600AISetSimultaneous Lib "me2600.dll" Alias "_VBme2600AISetSimultaneous@8" (ByVal lBoardnumber As Long, ByVal lMode As Long) As Long
Declare Function me2600AISingle Lib "me2600.dll" Alias "_VBme2600AISingle@16" (ByVal lBoardnumber As Long, ByVal lChannelNo As Long, ByVal lMode As Long, ByRef piValue As Integer) As Long
Declare Function me2600AIQuick Lib "me2600.dll" Alias "_VBme2600AIQuick@16" (ByVal lBoardnumber As Long, ByRef piBuffer As Integer, ByVal lCount As Long, ByVal lMode As Long) As Long
Declare Function me2600AIMultiple Lib "me2600.dll" Alias "_VBme2600AIMultiple@16" (ByVal lBoardnumber As Long, ByRef piBuffer As Integer, ByVal lCount As Long, ByVal lMode As Long) As Long
Declare Function me2600AIScan Lib "me2600.dll" Alias "_VBme2600AIScan@20" (ByVal lBoardnumber As Long, ByRef piBuffer As Integer, ByVal lSize As Long, ByVal lCount As Long, ByVal lMode As Long) As Long
Declare Function me2600AIStop Lib "me2600.dll" Alias "_VBme2600AIStop@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600AISingleEx Lib "me2600.dll" Alias "_VBme2600AISingleEx@28" (ByVal lBoardnumber As Long, ByVal lChannel As Long, ByVal lMode As Long, ByVal lLoops As Long, ByVal lDelay As Long, ByRef piBuffer As Integer, ByVal pCallBack As Long) As Long
Declare Function me2600AIQuickEx Lib "me2600.dll" Alias "_VBme2600AIQuickEx@28" (ByVal lBoardnumber As Long, ByRef piBuffer As Integer, ByVal lCount As Long, ByVal lMode As Long, ByVal lLoops As Long, ByVal lDelay As Long, ByVal pCallBack As Long) As Long
Declare Function me2600AIMultipleEx Lib "me2600.dll" Alias "_VBme2600AIMultipleEx@28" (ByVal lBoardnumber As Long, ByRef piBuffer As Integer, ByVal lCount As Long, ByVal lMode As Long, ByVal lLoops As Long, ByVal lDelay As Long, ByVal pCallBack As Long) As Long
Declare Function me2600AIScanEx Lib "me2600.dll" Alias "_VBme2600AIScanEx@32" (ByVal lBoardnumber As Long, ByRef piBuffer As Integer, ByVal lSize As Long, ByVal lCount As Long, ByVal lMode As Long, ByVal lLoops As Long, ByVal lDelay As Long, ByVal pCallBack As Long) As Long
Declare Function me2600SetPriority Lib "me2600.dll" Alias "_VBme2600SetPriority@8" (ByVal lBoardnumber As Long, ByVal lPriority As Long) As Long
Declare Function me2600AOAddToDACFIFO Lib "me2600.dll" Alias "_VBme2600AOAddToDACFIFO@8" (ByVal lBoardnumber As Long, ByVal lEntry As Long) As Long
Declare Function me2600AOClearDACFIFO Lib "me2600.dll" Alias "_VBme2600AOClearDACFIFO@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600AOReset Lib "me2600.dll" Alias "_VBme2600AOReset@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600AOSetTimer Lib "me2600.dll" Alias "_VBme2600AOSetTimer@8" (ByVal lBoardnumber As Long, ByVal lTime As Long) As Long
Declare Function me2600AOSetTrigger Lib "me2600.dll" Alias "_VBme2600AOSetTrigger@8" (ByVal lBoardnumber As Long, ByVal lModePolarity As Long) As Long
Declare Function me2600AOSetMode Lib "me2600.dll" Alias "_VBme2600AOSetMode@16" (ByVal lBoardnumber As Long, ByVal lChannel As Long, ByVal lRange As Long, ByVal lMode As Long) As Long
Declare Function me2600AOSingle Lib "me2600.dll" Alias "_VBme2600AOSingle@12" (ByVal lBoardnumber As Long, ByVal lChannel As Long, ByVal iValue As Integer) As Long
Declare Function me2600AOWrapAround Lib "me2600.dll" Alias "_VBme2600AOWrapAround@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600AOStop Lib "me2600.dll" Alias "_VBme2600AOStop@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600AOStopEx Lib "me2600.dll" Alias "_VBme2600AOStopEx@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600AOUpdate Lib "me2600.dll" Alias "_VBme2600AOUpdate@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600AOContinuous Lib "me2600.dll" Alias "_VBme2600AOContinuous@16" (ByVal lBoardnumber As Long, ByVal lMode As Long, ByVal lSize As Long, ByRef piBuffer As Integer) As Long
Declare Function me2600AOContinuousEx Lib "me2600.dll" Alias "_VBme2600AOContinuousEx@28" (ByVal lBoardnumber As Long, ByVal lMode As Long, ByVal lSize As Long, ByRef piBuffer As Integer, ByVal lLoops As Long, ByVal lDelay As Long, ByVal pCallBack As Long) As Long
Declare Function me2600DIOSetPortDirection Lib "me2600.dll" Alias "_VBme2600DIOSetPortDirection@12" (ByVal lBoardnumber As Long, ByVal lPortNo As Long, ByVal lDir As Long) As Long
Declare Function me2600DIGetBit Lib "me2600.dll" Alias "_VBme2600DIGetBit@16" (ByVal lBoardnumber As Long, ByVal lPortNo As Long, ByVal lBitNo As Long, ByRef pBitValue As Long) As Long
Declare Function me2600DIGetByte Lib "me2600.dll" Alias "_VBme2600DIGetByte@16" (ByVal lBoardnumber As Long, ByVal lPortNo As Long, ByVal lBitNo As Long, ByRef pByteValue As Long) As Long
Declare Function me2600DIGetWord Lib "me2600.dll" Alias "_VBme2600DIGetWord@12" (ByVal lBoardnumber As Long, ByVal lPortNo As Long, ByRef pValue As Long) As Long
Declare Function me2600DOSetBit Lib "me2600.dll" Alias "_VBme2600DOSetBit@16" (ByVal lBoardnumber As Long, ByVal lPortNo As Long, ByVal lBitNo As Long, ByVal lBitValue As Long) As Long
Declare Function me2600DOSetByte Lib "me2600.dll" Alias "_VBme2600DOSetByte@16" (ByVal lBoardnumber As Long, ByVal lPortNo As Long, ByVal lBitNo As Long, ByVal lByteValue As Long) As Long
Declare Function me2600DOSetWord Lib "me2600.dll" Alias "_VBme2600DOSetWord@12" (ByVal lBoardnumber As Long, ByVal lPortNo As Long, ByVal lValue As Long) As Long
Declare Function me2600DOReset Lib "me2600.dll" Alias "_VBme2600DOReset@8" (ByVal lBoardnumber As Long, ByVal lPortNo As Long) As Long
Declare Function me2600PWMStart Lib "me2600.dll" Alias "_VBme2600PWMStart@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600PWMStop Lib "me2600.dll" Alias "_VBme2600PWMStop@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600PWMSetMode Lib "me2600.dll" Alias "_VBme2600PWMSetMode@20" (ByVal lBoardnumber As Long, ByVal dFrequency As Double, ByVal lDutyCycle As Long, ByVal lInverted As Long) As Long
Declare Function me2600DisableExternalInt Lib "me2600.dll" Alias "_VBme2600DisableExternalInt@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600EnableExternalInt Lib "me2600.dll" Alias "_VBme2600EnableExternalInt@8" (ByVal lBoardnumber As Long, ByVal pCallBack As Long) As Long
Declare Function me2600CNTStart Lib "me2600.dll" Alias "_VBme2600CNTStart@8" (ByVal lBoardnumber As Long, ByVal lCounter As Long) As Long
Declare Function me2600CNTReset Lib "me2600.dll" Alias "_VBme2600CNTReset@8" (ByVal lBoardnumber As Long, ByVal lCounter As Long) As Long
Declare Function me2600CNTRead Lib "me2600.dll" Alias "_VBme2600CNTRead@12" (ByVal lBoardnumber As Long, ByVal lCounter As Long, ByRef piCounterValue As Integer) As Long
Declare Function me2600CNTSetRange Lib "me2600.dll" Alias "_VBme2600CNTSetRange@16" (ByVal lBoardnumber As Long, ByVal lCounter As Long, ByVal lEndVal As Long, ByVal lStartVal As Long) As Long
Declare Function me2600CNTInterrupt Lib "me2600.dll" Alias "_VBme2600CNTInterrupt@16" (ByVal lBoardnumber As Long, ByVal lCounter As Long, ByVal lFlag As Long, ByVal pCallBack As Long) As Long
Declare Function me2600SIOReadRegister Lib "me2600.dll" Alias "_VBme2600SIOReadRegister@8" (ByVal lBoardnumber As Long, ByVal cReg As Byte) As Byte
Declare Function me2600SIOWriteRegister Lib "me2600.dll" Alias "_VBme2600SIOWriteRegister@12" (ByVal lBoardnumber As Long, ByVal cReg As Byte, ByVal cVal As Byte) As Byte
Declare Function me2600SIOLoopBackTest Lib "me2600.dll" Alias "_VBme2600SIOLoopBackTest@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600SIOSetup Lib "me2600.dll" Alias "_VBme2600SIOSetup@20" (ByVal lBoardnumber As Long, ByVal lBaud As Long, ByVal lLen As Long, ByVal lStop As Long, ByVal cParity As Byte) As Long
Declare Function me2600SIOGetRegisters Lib "me2600.dll" Alias "_VBme2600SIOGetRegisters@8" (ByVal lBoardnumber As Long, ByRef Regs As ME2600_SIO_REGS) As Long
Declare Function me2600SIOTransmit Lib "me2600.dll" Alias "_VBme2600SIOTransmit@16" (ByVal lBoardnumber As Long, ByVal lMode As Long, ByVal lCount As Long, ByVal lpBuffer As String) As Long
Declare Function me2600SIOReceive Lib "me2600.dll" Alias "_VBme2600SIOReceive@16" (ByVal lBoardnumber As Long, ByVal lMode As Long, ByVal lCount As Long, ByVal lpBuffer As String) As Long
Declare Function me2600SIOOpen Lib "me2600.dll" Alias "_VBme2600SIOOpen@16" (ByVal lBoardnumber As Long, ByVal lMode As Long, ByVal lInbufferSize As Long, ByVal lOutBufferSize As Long) As Long
Declare Function me2600SIOClose Lib "me2600.dll" Alias "_VBme2600SIOClose@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600SIOCheckError Lib "me2600.dll" Alias "_VBme2600SIOCheckError@4" (ByVal lBoardnumber As Long) As Long
Declare Function me2600SIOClearBuffer Lib "me2600.dll" Alias "_VBme2600SIOClearBuffer@4" (ByVal lBoardnumber As Long) As Long
